# librarian

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: wiki-lint.sh
agents/adk-agent-pocs/: .gitignore  va_agents_README.md
agents/cartographer/: __main__.py  migrate.py
agents/presenter/: __main__.py  providers.py  viz_classifier.py
agents/researcher/: __main__.py  agent.py  chunker.py  prompts.py
app/backend/: Dockerfile  agent.py  embeddings.py  main.py  umap_layout.py  wiki_parser.py
app/mcp_server/: server.py
app/ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
etl/: ingest_linear.py  ingest_notion.py  manifest.py  scrape_bookmarks.py  scrape_sessions.py  seed_from_playground.py  visualize.py
etl/researcher/: __main__.py  _settings.py  agent.py  chunker.py  extractor.py  models.py  writer.py
librarian/.obsidian/: workspace.json
mcp_server/: server.py
raw/: manifest.jsonl
raw/agent-skills/: README.md
raw/claude-skills/: README.md
raw/gdrive/: 2026-04-15-adk-overview-poc-architecture.md  2026-04-24-langgraph-yan.md
raw/linear/: 2026-04-24-evaluation-and-improvement.md
raw/meetings/: 2026-04-15-langgraph-huddle.md
raw/notion/: 2026-04-07-support-knowledge-agent.md  2026-04-09-copilot-why-what-how.md  2026-04-13-rag-pipeline-requirements.md  2026-04-21-agt09-adk-vs-langgraph-spike.md
scripts/: _graph.html  ingest_pdf.py  scrape_claude_docs.py  screenshot.py
tests/: conftest.py
wiki/: _conflicts.md  _index.md
(+294 files in other folders)
